--- a/templates/base.html
+++ b/templates/base.html
@@ -6,19 +6,37 @@
         <meta charser="UTF-8">
         <title>{% block title %}{% endblock %}</title>
         <link rel="stylesheet" href="{% static 'css\bootstrap.min.css' %}">
+        <link rel="icon" href="{% static "img\logo.png" %}" type="image/x-icon">
         {% block file_css_js %}{% endblock file_css_js %}
 
     </head>
     <body>
-
-        <div class="container"> 
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb my-4">
-                    {% block breadcrumb %}{% endblock %}
-                </ol>
+        {% block body %}
+            <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+                <div class="container">
+                    <a class="navbar-brand" href="{% url 'Home' %}">Django Boards</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="mainMenu">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Welcome  {{ user.username }}
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
-            {% block content %}{% endblock %}
-        </div>
-                
+            <div class="container"> 
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb my-4">
+                        {% block breadcrumb %}{% endblock %}
+                    </ol>
+                </nav>
+                {% block content %}{% endblock %}
+            </div>
+        {% endblock body %}
     </body>
 </html>
