--- a/templates/base.html
+++ b/templates/base.html
@@ -3,10 +3,12 @@
 <html lang="en">
     <head>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charser="UTF-8">
         <title>{% block title %}{% endblock %}</title>
-        <link rel="stylesheet" href="{% static 'css\bootstrap.min.css' %}">
+        {% comment %} <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> {% endcomment %}
         <link rel="icon" href="{% static "img\logo.png" %}" type="image/x-icon">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         {% block file_css_js %}{% endblock file_css_js %}
 
     </head>
@@ -19,24 +21,44 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="mainMenu">
-                        <ul class="navbar-nav ml-auto">
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Welcome  {{ user.username }}
-                                </a>
-                            </li>
-                        </ul>
+                        {%if user.is_authenticated%}
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Welcome  {{ user.username }}
+                                    </a>
+                                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                                        <a class="dropdown-item" href="">My account</a>
+                                        <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
+                                    <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="{% url 'Logout' %}">Log out</a>
+                                    </div>
+                                </li>
+                            </ul>
+                        {%else%}
+                            <form class="form-inline ml-auto">
+                                <a href="{% url 'Login' %}" class="btn btn-outline-secondary">Login</a>
+                                <a href="{% url 'signup' %}" class="btn btn-primary ml-2">Signup</a>
+                            </form>
+                        {%endif%}
                     </div>
                 </div>
             </nav>
             <div class="container"> 
-                <nav aria-label="breadcrumb">
-                    <ol class="breadcrumb my-4">
+                <ul class="breadcrumb my-4" >
+                    {% comment %} <div class="alert alert-secondary" role="alert" style="white-space: nowrap; width: 100%; display: inline-block; background-color: #e8ecef; border-color: #f0f1f2;"> {% endcomment %}
                         {% block breadcrumb %}{% endblock %}
-                    </ol>
-                </nav>
+                    {% comment %} </div> {% endcomment %}
+                    
+                </ul>
                 {% block content %}{% endblock %}
             </div>
         {% endblock body %}
+        {% comment %} <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
+        <script src="{% static 'js/popper.min.js' %}"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script> {% endcomment %}
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     </body>
 </html>
