--- a/templates/new_topic.html
+++ b/templates/new_topic.html
@@ -6,17 +6,15 @@
 {% endblock %}
 
 {% block breadcrumb %}
-    <li class="breadcrumb-item"><a href="{% url 'Home' %}">Boards</a></li>
-    <li class="breadcrumb-item"><a href="{% url 'board_topics' board.pk %}">{{board.name}}</a></li>
-    <li class="breadcrumb-item active">New Topic</li>
+    <li class="breadcrumb-item" style="display: inline-block;"><a href="{% url 'Home' %}" style="text-decoration: none;">Boards</a></li>
+    <li class="breadcrumb-item" style="display: inline-block;"><a href="{% url 'board_topics' board.pk %}" style="text-decoration: none;">{{board.name}}</a></li>
+    <li class="breadcrumb-item active" style="display: inline-block;">New Topic</li>
 {% endblock %}
 
 {% block content %}
     <form class="form" method="post" novalidation>
         {% csrf_token %}
         {% include 'includes/forms.html' %}
-        <br>
-        <br>
         <button type="submit" class="btn btn-success">&nbsp;&nbsp;&nbsp;Add&nbsp;&nbsp;&nbsp;</button>
     </form>
 {% endblock %}
